--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
 </header >
-<div id="title" >
+<div id="title">
     <h1>Currently Browsing: Design</h1>
 </div>
 <div id="over_all">
@@ -56,67 +56,53 @@
         <div>
             <img class="img" src="/imges/books.png" alt="">
         </div>
-        <div class="Large_text">
-            <h2>15+ Best Angular Admin Dashboard Templates of 2020 – Users Choice</h2>
-        </div>
-        <div class="small_text">
-        <p>We have compiled a list of best Angular templates for you. These offer you to start your web application and help you build a powerful and practical administration panel….</p>
+            <h2 class="Large_text">15+ Best Angular Admin Dashboard Templates of 2020 – Users Choice</h2>
+        <p class="small_text">We have compiled a list of best Angular templates for you. These offer you to start your web application and help you build a powerful and practical administration panel….</p>
     </div>
-    </div>
+
+
     <div class="container">
         <div>
             <img class="img" src="/imges/data.png" alt="">
         </div>
-        <div class="Large_text">
-            <h2>30 Beautiful Google Fonts for Your Website</h2>
-        </div>
-        <div class="small_text">
-        <p>Finding attractive, user-friendly, legible fonts for your website isn’t always easy, but Google Fonts, launched in 2010, helps solve that problem. Having started small, the directory now includes more…</p>
+            <h2 class="Large_text">30 Beautiful Google Fonts for Your Website</h2>
+        <p class="small_text">Finding attractive, user-friendly, legible fonts for your website isn’t always easy, but Google Fonts, launched in 2010, helps solve that problem. Having started small, the directory now includes more…</p>
     </div>
-    </div>
+
+
     <div class="container">
         <div>
             <img class="img" src="/imges/font.png" alt="">
         </div>
-        <div class="Large_text">
-            <h2>Design Thinking 101 for Designers</h2>
-        </div>
-        <div class="small_text">
-        <p>Creativity doesn’t just happen. The most inspired and innovative teams and individual designers need to be a part of a culture that enables forward-thinking, acceleration, and efficiency. It’s a…</p>
+            <h2 class="Large_text">Design Thinking 101 for Designers</h2>
+        <p class="small_text">Creativity doesn’t just happen. The most inspired and innovative teams and individual designers need to be a part of a culture that enables forward-thinking, acceleration, and efficiency. It’s a…</p>
     </div>
-    </div>
+
+
     <div class="container">
         <div>
             <img class="img" src="/imges/books.png" alt="">
         </div>
-        <div class="Large_text">
-            <h2>15+ Best Angular Admin Dashboard Templates of 2020 – Users Choice</h2>
-        </div>
-        <div class="small_text">
-            <p>We have compiled a list of best Angular templates for you. These offer you to start your web application and help you build a powerful and practical administration panel….</p>
-        </div>
+            <h2 class="Large_text">15+ Best Angular Admin Dashboard Templates of 2020 – Users Choice</h2>
+            <p class="small_text">We have compiled a list of best Angular templates for you. These offer you to start your web application and help you build a powerful and practical administration panel….</p>
     </div>
+
+
     <div class="container">
         <div>
             <img class="img" src="/imges/data.png" alt="">
         </div>
-        <div class="Large_text">
-            <h2>30 Beautiful Google Fonts for Your Website</h2>
-        </div>
-        <div class="small_text">
-            <p>Finding attractive, user-friendly, legible fonts for your website isn’t always easy, but Google Fonts, launched in 2010, helps solve that problem. Having started small, the directory now includes more…</p>
-        </div>
+            <h2 class="Large_text">30 Beautiful Google Fonts for Your Website</h2>
+            <p class="small_text">Finding attractive, user-friendly, legible fonts for your website isn’t always easy, but Google Fonts, launched in 2010, helps solve that problem. Having started small, the directory now includes more…</p>
     </div>
+
+
     <div class="container">
         <div>
             <img class="img" src="/imges/font.png" alt="">
         </div>
-        <div class="Large_text">
-            <h2>Design Thinking 101 for Designers</h2>
-        </div>
-        <div class="small_text">
-            <p>Creativity doesn’t just happen. The most inspired and innovative teams and individual designers need to be a part of a culture that enables forward-thinking, acceleration, and efficiency. It’s a… </p>
-        </div>
+            <h2 class="Large_text">Design Thinking 101 for Designers</h2>
+            <p class="small_text">Creativity doesn’t just happen. The most inspired and innovative teams and individual designers need to be a part of a culture that enables forward-thinking, acceleration, and efficiency. It’s a… </p>
     </div>
 
 </div>
