--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>onextrapixel</title>
     <link rel="stylesheet" href="Website.css">
     <script src="https://kit.fontawesome.com/6c85162ce7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body>
 <header id="nav" >
@@ -48,64 +51,19 @@
     </div>
 
 </header >
-<div id="title">
+<div id="main-title">
     <h1>Currently Browsing: Design</h1>
 </div>
-<div id="over_all">
-    <div class="container">
-        <div>
-            <img class="img" src="/imges/books.png" alt="">
-        </div>
-            <h2 class="Large_text">15+ Best Angular Admin Dashboard Templates of 2020 – Users Choice</h2>
-        <p class="small_text">We have compiled a list of best Angular templates for you. These offer you to start your web application and help you build a powerful and practical administration panel….</p>
-    </div>
 
 
-    <div class="container">
-        <div>
-            <img class="img" src="/imges/data.png" alt="">
-        </div>
-            <h2 class="Large_text">30 Beautiful Google Fonts for Your Website</h2>
-        <p class="small_text">Finding attractive, user-friendly, legible fonts for your website isn’t always easy, but Google Fonts, launched in 2010, helps solve that problem. Having started small, the directory now includes more…</p>
-    </div>
+<div id="over_all"></div>
 
-
-    <div class="container">
-        <div>
-            <img class="img" src="/imges/font.png" alt="">
-        </div>
-            <h2 class="Large_text">Design Thinking 101 for Designers</h2>
-        <p class="small_text">Creativity doesn’t just happen. The most inspired and innovative teams and individual designers need to be a part of a culture that enables forward-thinking, acceleration, and efficiency. It’s a…</p>
-    </div>
-
-
-    <div class="container">
-        <div>
-            <img class="img" src="/imges/books.png" alt="">
-        </div>
-            <h2 class="Large_text">15+ Best Angular Admin Dashboard Templates of 2020 – Users Choice</h2>
-            <p class="small_text">We have compiled a list of best Angular templates for you. These offer you to start your web application and help you build a powerful and practical administration panel….</p>
-    </div>
-
-
-    <div class="container">
-        <div>
-            <img class="img" src="/imges/data.png" alt="">
-        </div>
-            <h2 class="Large_text">30 Beautiful Google Fonts for Your Website</h2>
-            <p class="small_text">Finding attractive, user-friendly, legible fonts for your website isn’t always easy, but Google Fonts, launched in 2010, helps solve that problem. Having started small, the directory now includes more…</p>
-    </div>
-
-
-    <div class="container">
-        <div>
-            <img class="img" src="/imges/font.png" alt="">
-        </div>
-            <h2 class="Large_text">Design Thinking 101 for Designers</h2>
-            <p class="small_text">Creativity doesn’t just happen. The most inspired and innovative teams and individual designers need to be a part of a culture that enables forward-thinking, acceleration, and efficiency. It’s a… </p>
-    </div>
-
+<div id="new-blog-section">
+    <h2>Create New Blog</h2>
+    <button id="create-new-blog">Create New Blog</button>
+    <div id="error-message"></div>
 </div>
+
 <footer id="footer">
     <div id="footer_sub">
         <div><p class="Large_text_footer"><i class="fa-solid fa-user"></i>Hamza Khalifa</p></div>
@@ -115,5 +73,6 @@
         <div> <p class="Large_text_footer" ><i class="fa-solid fa-house"></i>Jenin/Haifa Street</p></div>
     </div>
 </footer>
+<script src="blogsList.js"></script>
 </body>
 </html>
